# JsonCatchBoostSkeleton

./: .gitmodules  CMakeLists.txt  Readme.md  boot  run
source/: main.cpp
tests/: CMakeLists.txt  test_file.cpp
